syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zupacademy.valeria";
option java_outer_classname = "KeyManagerPix";
option objc_class_prefix = "HLW";

package br.com.zupacademy.valeria;

//Metodo onde eu vou definir meus endpoints
service KeyManagerPixService {
  rpc cadastrarChavePix (KeyManagerPixRequest) returns (KeyManagerPixReply) {}
}

//message = as classes que eu preciso para manipular. Ã‰ ideial que essas messages sejam coerentes com as classes em kotlin
message KeyManagerPixRequest {
    string clienteId = 1;
    TipoChave tipoChave = 2;
    string valChave = 3;
    TipoConta tipo = 4;
}
//
message KeyManagerPixReply {
    string idPix = 1;
    string valChave = 2;
}

enum TipoChave {
    TIPO_CHAVE_DESCONHECIDO = 0;
    CPF = 1;
    CELULAR = 2;
    EMAIL = 3;
    RANDOM = 4;
}

enum TipoConta {
    TIPO_CONTA_DESCONHECIDO = 0;
    CONTA_CORRENTE = 1;
    CONTA_POUPANCA = 2;
}